Added PasswordEncoder injection for encoding passwords